add sources to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,8 @@ endif()
 # fase.so
 add_library(fase SHARED
     ${CMAKE_SOURCE_DIR}/src/fase.cpp
+    ${CMAKE_SOURCE_DIR}/src/editor.cpp
+    ${CMAKE_SOURCE_DIR}/src/core.cpp
 )
 setup_target(fase "" "")
 list(APPEND FASE_INCLUDE ${CMAKE_SOURCE_DIR}/src)
